# openapi.yaml
@@ -446,3 +446,79 @@ paths:
                   message:
                     type: string
                     example: "Unauthorized access."
+
+  /application/agent-details:
+    post:
+      summary: Fetch Agent Details
+      description: Retrieves the agent details.
+      operationId: agentDetails
+      parameters:
+        - name: authorization
+          in: header
+          required: true
+          description: Bearer token for authorization.
+          schema:
+            type: string
+            example: "Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIs..."
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - agentCode
+              properties:
+                agentCode:
+                  type: string
+                  description: Agent code of the agent.
+                  example: "AGT12345"
+      responses:
+        "200":
+          description: Agent data fetched successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    description: HTTP status code
+                    example: 200
+                  message:
+                    type: string
+                    description: Status message
+                    example: "Agent data fetched successfully"
+                  data:
+                    type: object
+                    properties:
+                      agentCode:
+                        type: string
+                        description: Unique code of the agent
+                        example: "AGT12345"
+                      name:
+                        type: string
+                        description: Name of the agent
+                        example: "Rahul Sharma"
+                      branchCode:
+                        type: string
+                        description: Code of the branch the agent is associated with
+                        example: "BRC5678"
+                      branchName:
+                        type: string
+                        description: Name of the branch
+                        example: "Mumbai Central"
+                      branchLocation:
+                        type: string
+                        description: Location of the branch
+                        example: "Mumbai, Maharashtra"
+        "401":
+          description: Unauthorized - Invalid token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Unauthorized access."
